# RI

./: .gitignore  README.md  dependencies.sh  gym_env.py  main.py  pyproject.toml  requirement.txt  requirements.txt
p1/: TODO.md  cylinder_env.py  env.py  eval.py  eval_policy.py  gym_env.py  gym_test.py  main.py  memoria.tex  run.sh  train.py  train_ppo.py
p1 copia/: env.py  eval.py  train.py
p1 copia/docs/: TODO.md
p1 copia/logs/: episode_metrics.csv  evaluations.npz  phase1_metrics.csv  phase1_monitor.csv  phase2_metrics.csv  phase2_monitor.csv  train_monitor.csv  training_metrics.csv
p1/docs/: TODO.md  memoria.tex
p1/tb/PPO_1/: events.out.tfevents.1759319110.DESKTOP-AMHI51B.9348.0
p1/tb/PPO_2/: events.out.tfevents.1759319508.DESKTOP-AMHI51B.2752.0
p2/: TODO.md
p2/good/checkpoints_neat/: neat-checkpoint-24  neat-checkpoint-29
p2/good/models_neat/: config_used.txt  stats.pkl  (+1 more)
p2/v0/: train.py
p2/v1/: config.txt  env.py  generate_visuals.py  train.py  train_mac.py  validate.py
p2/v2/: config.txt  env.py  eval.py  train.py  train_mac.py  validate.py  visualize.py  ç
p2/v3/: config.txt  env.py  generate_visuals.py  train.py  train_mac.py  validate.py
p3/: TODO.md  ar_control_real.py  ar_control_sim.py  config.py  gesture_control.py  iter.txt  main.py  main_real.py  rl_policy.py  robobo_interface.py  teleop_controller.py  test.py  vision.py  ç
p3/vision/: config.py  teleop_controller.py  vision.py
p4/: explicaciones.md  run.txt
p4/projects/: fake_agent_input.soar  hello_world.soar  p2.soar  p3.soar  p4.soar  p5.soar  p6.soar
(+73 files in other folders)
