[project]
name = "ri"
version = "0.1.0"
description = ""
authors = [
    {name = "Pablo Chantada",email = "pablo.chantada@udc.es"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "neat-python (>=0.92,<0.93)",
    "gymnasium (>=1.2.1,<2.0.0)",
    "robobopy (>=1.5.0,<2.0.0)",
    "robobosim (>=1.5.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
