[tool.poetry]
name = "ri-practicas"
version = "0.1.0"
description = "Prácticas de Robótica Inteligente - Universidad"
authors = ["clown <clown@circus.local>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13, <3.15"
neat-python = "^0.92"
gymnasium = "^1.2.1"
matplotlib = "^3.10.7"
graphviz = "^0.21"
robobopy = "^1.5.0"
robobosim = "^1.5.1"
stable-baselines3 = "^2.7.0"
numpy = ">=2,<2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
